@@ -43,11 +43,9 @@
 #include "cred.h"
 #include "dec.h"
 #include "gids.h"
-#include "job.h"
 #include "log.h"
 #include "m_msg.h"
 #include "mac.h"
-#include "md.h"
 #include "munge_defs.h"
 #include "random.h"
 #include "replay.h"
