@@ -40,11 +40,9 @@
 #include "conf.h"
 #include "cred.h"
 #include "enc.h"
-#include "job.h"
 #include "log.h"
 #include "m_msg.h"
 #include "mac.h"
-#include "md.h"
 #include "munge_defs.h"
 #include "random.h"
 #include "str.h"
